==> zephyrproject-rtos/zephyr/drivers/adc/adc_cc23x0.c <==
#define DT_DRV_COMPAT ti_cc23x0_adc
#include <zephyr/logging/log.h>
#include <zephyr/device.h>
#include <zephyr/drivers/adc.h>
#include <zephyr/drivers/dma.h>
#include <zephyr/drivers/pinctrl.h>
#include <zephyr/irq.h>
#include <zephyr/pm/device.h>
#include <zephyr/pm/device_runtime.h>
#include <zephyr/pm/policy.h>
#include <zephyr/sys/util.h>
#include <driverlib/adc.h>
#include <driverlib/clkctl.h>
#include <inc/hw_memmap.h>
#define ADC_CONTEXT_USES_KERNEL_TIMER
#include "adc_context.h"
#define ADC_CC23X0_CH_UNDEF	0xff
#define ADC_CC23X0_CH_COUNT	16
#define ADC_CC23X0_CH_MAX	(ADC_CC23X0_CH_COUNT - 1)
#define ADC_CC23X0_MEM_COUNT	4
#define ADC_CC23X0_MEM_MAX	(ADC_CC23X0_MEM_COUNT - 1)
#define ADC_CC23X0_MAX_CYCLES	1023
#define ADC_CC23X0_REG_GET(offset) (ADC_BASE + (offset))
#define ADC_CC23X0_INT_MASK	ADC_INT_DMADONE
#define ADC_CC23X0_INT_MASK	(ADC_INT_MEMRES_00 | \
				 ADC_INT_MEMRES_01 | \
				 ADC_INT_MEMRES_02 | \
				 ADC_INT_MEMRES_03)
#define ADC_CC23X0_INT_MEMRES(i)	(ADC_INT_MEMRES_00 << (i))
#define ADC_CC23X0_MEMCTL(base, i)	HWREG((base) + ADC_O_MEMCTL0 + sizeof(uint32_t) * (i))

static void adc_context_start_sampling(struct adc_context *ctx)
{
	struct adc_cc23x0_data *data = CONTAINER_OF(ctx, struct adc_cc23x0_data, ctx);
#ifdef CONFIG_ADC_CC23X0_DMA_DRIVEN
	const struct adc_cc23x0_config *cfg = data->dev->config;

	struct dma_block_config block_cfg = {
		.source_address = ADC_CC23X0_REG_GET(ADC_O_MEMRES0),
		.dest_address = (uint32_t)(data->buffer),
		.source_addr_adj = DMA_ADDR_ADJ_INCREMENT,
		.dest_addr_adj = DMA_ADDR_ADJ_INCREMENT,
		.block_size = data->ch_count * sizeof(*data->buffer),
	};

	struct dma_config dma_cfg = {
		.dma_slot = cfg->dma_trigsrc,
		.channel_direction = PERIPHERAL_TO_MEMORY,
		.block_count = 1,
		.head_block = &block_cfg,
		.source_data_size = sizeof(uint32_t),
		.dest_data_size = sizeof(*data->buffer),
		.source_burst_length = block_cfg.block_size,
		.dma_callback = NULL,
		.user_data = NULL,
	};

	int ret;

	ret = pm_device_runtime_get(cfg->dma_dev);
	if (ret) {
		LOG_ERR("Failed to resume DMA (%d)", ret);
		return;
	}

	ret = dma_config(cfg->dma_dev, cfg->dma_channel, &dma_cfg);
	if (ret) {
		LOG_ERR("Failed to configure DMA (%d)", ret);
		return;
	}

	ADCEnableDMATrigger();

	dma_start(cfg->dma_dev, cfg->dma_channel);
#else
	data->mem_index = 0;
#endif

	adc_cc23x0_pm_policy_state_lock_get();

	ADCManualTrigger();
}

static void adc_context_update_buffer_pointer(struct adc_context *ctx, bool repeat)
{
	struct adc_cc23x0_data *data = CONTAINER_OF(ctx, struct adc_cc23x0_data, ctx);

	if (!repeat) {
		data->buffer += data->ch_count;
	}
}

static void adc_cc23x0_isr(const struct device *dev)
{
	struct adc_cc23x0_data *data = dev->data;
#ifndef CONFIG_ADC_CC23X0_DMA_DRIVEN
	uint32_t adc_val;
	uint8_t ch;
#endif

#ifdef CONFIG_ADC_CC23X0_DMA_DRIVEN
	const struct adc_cc23x0_config *cfg = dev->config;
	int ret;

	/*
	 * In DMA mode, do not compensate for the ADC internal gain with
	 * ADCAdjustValueForGain() function. To perform this compensation,
	 * reading the data from the buffer and overwriting them would be
	 * necessary, which would mitigate the advantage of using DMA.
	 */
	ADCClearInterrupt(ADC_INT_DMADONE);
	LOG_DBG("DMA done");

	ret = pm_device_runtime_put(cfg->dma_dev);
	if (ret) {
		LOG_ERR("Failed to suspend DMA (%d)", ret);
		return;
	}

	adc_cc23x0_pm_policy_state_lock_put();
	adc_context_on_sampling_done(&data->ctx, dev);
#else
	/*
	 * Even when there are multiple channels, only 1 flag can be set because
	 * of the trigger policy (next conversion requires a trigger)
	 */
	ch = data->ch_sel[data->mem_index];

	/*
	 * Both adjustment offset and adjustment gain depend on reference source.
	 * Internal gain is used for measurement compensation.
	 */
	adc_val = ADCAdjustValueForGain(ADCReadResultNonBlocking(data->mem_index),
					data->res,
					ADCGetAdjustmentGain(data->ref_volt[ch]));
	data->buffer[data->mem_index] = adc_val;

	ADCClearInterrupt(ADC_CC23X0_INT_MEMRES(data->mem_index));

	LOG_DBG("Mem %u, Ch %u, Val %d", data->mem_index, ch, adc_val);

	if (++data->mem_index < data->ch_count) {
		/* Set adjustment offset for the next channel */
		ch = data->ch_sel[data->mem_index];
		ADCSetAdjustmentOffset(data->ref_volt[ch]);
		LOG_DBG("Next Ch %u", ch);

		/* Trigger next conversion */
		ADCManualTrigger();
	} else {
		adc_cc23x0_pm_policy_state_lock_put();
		adc_context_on_sampling_done(&data->ctx, dev);
	}
#endif
}

static int adc_cc23x0_read(const struct device *dev,
			   const struct adc_sequence *sequence)
{
	return adc_cc23x0_read_common(dev, sequence, false, NULL);
}

static int adc_cc23x0_read_async(const struct device *dev,
				 const struct adc_sequence *sequence,
				 struct k_poll_signal *async)
{
	return adc_cc23x0_read_common(dev, sequence, true, async);
}

static int adc_cc23x0_channel_setup(const struct device *dev,
				    const struct adc_channel_cfg *channel_cfg)
{
	struct adc_cc23x0_data *data = dev->data;
	const uint8_t ch = channel_cfg->channel_id;
	uint32_t ref;
	uint32_t acq_time_ns;
	uint16_t clk_cycles;
	uint8_t clk_div;
	int ret;

	LOG_DBG("Channel %u", ch);

	if (ch > ADC_CC23X0_CH_MAX) {
		LOG_ERR("Channel %u is not supported, max %u", ch, ADC_CC23X0_CH_MAX);
		return -EINVAL;
	}

	if (channel_cfg->differential) {
		LOG_ERR("Differential channels are not supported");
		return -EINVAL;
	}

	if (channel_cfg->gain != ADC_GAIN_1) {
		LOG_ERR("Gain is not valid");
		return -EINVAL;
	}

	/* Set reference source */
	switch (channel_cfg->reference) {
	case ADC_REF_INTERNAL:
		ref = ADC_FIXED_REFERENCE_1V4;
		break;
	case ADC_REF_EXTERNAL0:
		ref = ADC_EXTERNAL_REFERENCE;
		break;
	case ADC_REF_VDD_1:
		ref = ADC_VDDS_REFERENCE;
		break;
	default:
		LOG_ERR("Reference is not valid");
		return -EINVAL;
	}

	data->ref_volt[ch] = ref;

	/* Set acquisition time */
	switch (ADC_ACQ_TIME_UNIT(channel_cfg->acquisition_time)) {
	case ADC_ACQ_TIME_TICKS:
		clk_div = 1;
		clk_cycles = (uint16_t)ADC_ACQ_TIME_VALUE(channel_cfg->acquisition_time);
		break;
	case ADC_ACQ_TIME_MICROSECONDS:
		acq_time_ns = 1000 * (uint16_t)ADC_ACQ_TIME_VALUE(channel_cfg->acquisition_time);
		ret = adc_cc23x0_calc_clk_cfg(acq_time_ns, &clk_div, &clk_cycles);
		if (ret) {
			LOG_DBG("No valid clock configuration found");
			return ret;
		}
		break;
	case ADC_ACQ_TIME_NANOSECONDS:
		acq_time_ns = (uint16_t)ADC_ACQ_TIME_VALUE(channel_cfg->acquisition_time);
		ret = adc_cc23x0_calc_clk_cfg(acq_time_ns, &clk_div, &clk_cycles);
		if (ret) {
			LOG_DBG("No valid clock configuration found");
			return ret;
		}
		break;
	default:
		clk_div = clk_dividers[ARRAY_SIZE(clk_dividers) - 1];
		clk_cycles = 1;
	}

	if (!data->clk_cycles) {
		data->clk_div = clk_div;
		data->clk_cycles = clk_cycles;
		ADCSetSampleDuration(adc_cc23x0_clkdiv_to_field(clk_div), data->clk_cycles);
	} else if (clk_div != data->clk_div || clk_cycles != data->clk_cycles) {
		LOG_ERR("Multiple sample durations are not supported");
		return -EINVAL;
	}

#ifdef CONFIG_PM_DEVICE
	data->configured = true;
#endif

	return 0;
}

static int adc_cc23x0_init(const struct device *dev)
{
	const struct adc_cc23x0_config *cfg = dev->config;
	struct adc_cc23x0_data *data = dev->data;
	int ret;

	ret = pinctrl_apply_state(cfg->pincfg, PINCTRL_STATE_DEFAULT);
	if (ret) {
		LOG_ERR("Failed to apply ADC pinctrl state");
		return ret;
	}

	data->dev = dev;
	cfg->irq_cfg_func();

	/* Enable clock */
	CLKCTLEnable(CLKCTL_BASE, CLKCTL_ADC0);

	/* Enable interrupts */
	ADCEnableInterrupt(ADC_CC23X0_INT_MASK);

#ifdef CONFIG_ADC_CC23X0_DMA_DRIVEN
	if (!device_is_ready(cfg->dma_dev)) {
		return -ENODEV;
	}

	ret = pm_device_runtime_enable(cfg->dma_dev);
	if (ret) {
		LOG_ERR("Failed to enable DMA runtime PM");
		return ret;
	}
#endif

	adc_context_unlock_unconditionally(&data->ctx);

	return 0;
}

static int adc_cc23x0_pm_action(const struct device *dev, enum pm_device_action action)
{
	struct adc_cc23x0_data *data = dev->data;

	switch (action) {
	case PM_DEVICE_ACTION_SUSPEND:
		CLKCTLDisable(CLKCTL_BASE, CLKCTL_ADC0);
		return 0;
	case PM_DEVICE_ACTION_RESUME:
		CLKCTLEnable(CLKCTL_BASE, CLKCTL_ADC0);
		ADCEnableInterrupt(ADC_CC23X0_INT_MASK);

		/* Restore context if needed */
		if (data->configured) {
			ADCSetSampleDuration(adc_cc23x0_clkdiv_to_field(data->clk_div),
					     data->clk_cycles);
		}

		return 0;
	default:
		return -ENOTSUP;
	}
}
